[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenmeter"
version = "0.1.0"
description = "Count tokens and estimate cost for prompts before you send them."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "José del Río" }]
keywords = ["llm", "tokens", "tiktoken", "cost", "openai", "budget", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "tiktoken>=0.7",
]

[project.urls]
Homepage = "https://github.com/jmweb-org/tokenmeter"
Repository = "https://github.com/jmweb-org/tokenmeter"
Issues = "https://github.com/jmweb-org/tokenmeter/issues"

[project.scripts]
tokenmeter = "tokenmeter.cli:entrypoint"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tokenmeter"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4", "RUF"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
source = ["tokenmeter"]
branch = true
